--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,12 @@ keywords = ["cron", "crontab", "scheduler", "job"]
 
 categories = ["date-and-time"]
 
+edition = "2021"
+
 [dependencies]
-cron = "~0.9"
-chrono = "~0.4"
-uuid = { version = "~0.8", features = ["v4"] }
+cron = "~0.11"
+chrono = { version = "~0.4", default-features = false, features = ["clock"] }
+uuid = { version = "~1.0", features = ["v4"] }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
