--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "job_scheduler"
-version = "1.2.1"
-authors = ["Lori Holden <noreply@loriholden.com>"]
-description = "A simple cron-like job scheduling library for Rust."
+name = "job_scheduler_ng"
+version = "2.0.0"
+authors = ["Mathijs van Veluw <black.dex@gmail.com>"]
+description = "A simple cron-like job scheduling library for Rust (Updated since 2022)."
 
-documentation = "https://docs.rs/job_scheduler/"
-repository = "https://github.com/lholden/job_scheduler"
+documentation = "https://docs.rs/job_scheduler_ng/"
+repository = "https://github.com/BlackDex/job_scheduler"
 
 license = "MIT/Apache-2.0"
 
@@ -22,4 +22,4 @@ chrono = { version = "~0.4", default-features = false, features = ["clock"] }
 uuid = { version = "~1.0", features = ["v4"] }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "time", "rt-multi-thread"] }
+tokio = { version = ">=1.18", features = ["macros", "time", "rt-multi-thread"] }
